...
                                foodItem.percentLeft <= 20 -> MaterialTheme.colorScheme.error
                                foodItem.percentLeft <= 50 -> MaterialTheme.colorScheme.tertiary
                                else -> MaterialTheme.colorScheme.primary
                            }
                        )
                        Text(
                            text = "remaining",
                            style = MaterialTheme.typography.labelSmall,
                            color = MaterialTheme.colorScheme.onSurfaceVariant
                        )
                    }
                }
            }
...
